Compiler Bouw/compiler/test/basic/stephen/fail/int_in_boolean.cvc
export int main() {
    bool[6] a = true;
    if (false && 5 && false) {}
    return 0;
}
